Fixing the search again filter position on mobile

--- a/wp-content/themes/seo-main/assets/styleguide/style.css
+++ b/wp-content/themes/seo-main/assets/styleguide/style.css
@@ -6363,13 +6363,18 @@ header {
   font-weight: 700;
   font-size: 19px;
   line-height: 1.35;
-  float: right;
-  margin-top: 7px; }
+  float: left;
+  margin-top: 7px;
+  padding-left: 25px; }
   .c-search-filter__btn .icon {
     margin-left: 10px; }
     .c-search-filter__btn .icon:before {
       position: relative;
       top: 3px; }
+  @media only screen and (min-width: 768px) {
+    .c-search-filter__btn {
+      float: right;
+      padding-left: 0; } }
 
 .c-searchform--results {
   position: absolute;
